# screen-recorder-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: __init__.py  bench_actions.py  bench_gaps.py  bench_ocr.py  bench_pipeline.py  conftest.py  industry_baselines.py  ocr_accuracy.py
examples/: help.txt  sample-output.json  test-output.txt
src/: __init__.py  api.py  cli.py  processor.py
src/screen_recorder_analyzer/: cli.py  llm.py  processor.py
tests/: test_processor.py
